synapse/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: synapse
  name: synapse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: synapse
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: synapse
    spec:
      containers:
      - image: matrixdotorg/synapse
        name: synapse
        ports:
        - containerPort: 8008
        volumeMounts:
        - name: config
          mountPath: /config
        - name: signing-key
          mountPath: /signing-key
        - name: media
          mountPath: /media
      volumes:
      - name: config-template
        configMap:
          name: homeserver
      - name: config
        emptyDir: {}
      - name: signing-key
        secret:
          secretName: signing-key
      - name: media
        persistentVolumeClaim:
          claimName: media
