synapse/mautrix-signal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mautrix-signal
  namespace: synapse
  labels:
    app: mautrix-signal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mautrix-signal
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
      labels:
        app: mautrix-signal
    spec:
      containers:
      - image: signald/signald:0.15.0-40-56a6c9d2
        name: signald
        resources:
          requests:
            cpu: 50m
            memory: 96Mi
          limits:
            cpu: 250m
            memory: 128Mi
        volumeMounts:
        - name: signald
          mountPath: /signald
      - image: dock.mau.dev/mautrix/signal:v0.2.1
        name: mautrix-signal
        ports:
        - containerPort: 29328
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 1
            memory: 128Mi
        volumeMounts:
        - name: data
          mountPath: /data
        - name: signald
          mountPath: /signald
      volumes:
      - name: config-template
        configMap:
          name: mautrix-signal
      - name: data
        emptyDir: {}
      - name: signald
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: mautrix-signal
  namespace: synapse
  labels:
    app: mautrix-signal
spec:
  ports:
  - port: 29328
    protocol: TCP
    targetPort: 29328
  selector:
    app: mautrix-signal
