synapse/mautrix-telegram.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mautrix-telegram
  namespace: synapse
  labels:
    app: mautrix-telegram
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mautrix-telegram
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
      labels:
        app: mautrix-telegram
    spec:
      containers:
      - image: dock.mau.dev/mautrix/telegram:v0.11.0
        name: mautrix-telegram
        ports:
        - containerPort: 29317
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: config-template
        configMap:
          name: mautrix-telegram
      - name: data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: mautrix-telegram
  namespace: synapse
  labels:
    app: mautrix-telegram
spec:
  ports:
  - port: 29317
    protocol: TCP
    targetPort: 29317
  selector:
    app: mautrix-telegram
