synapse/mautrix-whatsapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mautrix-whatsapp
  namespace: synapse
  labels:
    app: mautrix-whatsapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mautrix-whatsapp
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
      labels:
        app: mautrix-whatsapp
    spec:
      containers:
      - image: dock.mau.dev/mautrix/whatsapp:v0.2.1
        name: mautrix-whatsapp
        ports:
        - containerPort: 29318
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: config-template
        configMap:
          name: mautrix-whatsapp
      - name: data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: mautrix-whatsapp
  namespace: synapse
  labels:
    app: mautrix-whatsapp
spec:
  ports:
  - port: 29318
    protocol: TCP
    targetPort: 29318
  selector:
    app: mautrix-whatsapp
