synapse/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synapse
  namespace: synapse
  annotations:
    external-dns.alpha.kubernetes.io/hostname: matrix.samcday.com
spec:
  ingressClassName: nginx
  rules:
  - host: matrix.samcday.com
    http:
      paths:
      - backend:
          service:
            name: synapse
            port:
              number: 8008
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - matrix.samcday.com
    secretName: certificate
